--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@floating-ui/react-dom": "^2.1.1",
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.1.4",
+		"@vercel/analytics": "^1.3.1",
     "classnames": "^2.5.1",
     "cookie": "^1.0.1",
     "eslint": "^9.21.0",
