--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@vercel/analytics": "^1.3.1",
     "classnames": "^2.5.1",
     "compressorjs": "^1.2.1",
-    "cookie": "^1.0.1",
+    "date-fns": "^4.1.0",
     "eslint": "^9.21.0",
     "eslint-config-next": "15.3.1",
     "gray-matter": "^4.0.3",
@@ -27,6 +27,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.2.1",
+    "recharts": "^2.15.1",
     "sass": "^1.77.6",
     "sharp": "^0.33.4"
   },
